--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+	"parser": "babel-eslint",
 	"env": {
 		"browser": true,
 		"es6": true
@@ -36,5 +37,5 @@
 		"prettier/prettier": "error",
 		"react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
-	},
+	}
 }
